Add startup script to docker image
 - Possible to run multiple commands with COMMANDS
   parameter. e.g. COMMANDS="migrate run"

Signed-off-by: Valtteri Valtia <valtteri.valtia@csc.fi>