@@ -3,7 +3,7 @@ FROM openjdk:11-jre-slim
 RUN mkdir /rems
 WORKDIR /rems
 
-ENTRYPOINT ["java", "--illegal-access=deny", "-Drems.config=config/config.edn", "-jar", "rems.jar"]
+ENTRYPOINT ["./entrypoint.sh"]
 
 COPY empty-config.edn /rems/config/config.edn
 COPY target/uberjar/rems.jar /rems/rems.jar
